Fix grid after overflow scroll added to nav

--- a/css/doc_site_styling.scss
+++ b/css/doc_site_styling.scss
@@ -21,6 +21,7 @@ body {
   width: 100vw;
   display: grid;
   grid-template-columns: min-content auto;
+  grid-template-rows: min-content 1fr min-content;
   grid-template-areas:
     "header header"
     "sidebar content"
